--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=8080
 DB_HOST
-DB_LOCAL_DBNAME 
-DB_LOCAL_USER 
-DB_LOCAL_PASSWORD 
+DB_LOCAL_DBNAME
+DB_LOCAL_USER
+DB_LOCAL_PASSWORD
+SECRET_KEY
+SALT_ROUNDS
